Startpage added, Order form details added, bug fixed

--- a/Frontend/html/index.html
+++ b/Frontend/html/index.html
@@ -59,7 +59,7 @@
                     <p><span class="fa fa-hashtag"></span>HashtagTaxi</p>
                     <ul class="list-inline banner-social-buttons">
                     <li>
-                        <a class="btn btn-default btn-lg order-btn" href="#about">Замовити</a>
+                        <a class="btn btn-default btn-lg order-btn" href="../../order/order.html">Замовити</a>
                     </li>
                     </ul>
                 </div>
@@ -93,7 +93,12 @@
             <div class="row">
                 <div class="col-lg-12">
                     <h1 class="mainSign">Наші послуги</h1>
-                    <h2>ВИ МОЖЕТЕ ОБРАТИ АВТОМОБІЛЬ</h2>
+                    <div class="advantages">
+                    <p class="weWork"><span class="fa fa-bookmark-o circles"></span>Обрати автомобіль</p>
+                    <p class="weWork"><span class="fa fa-bookmark-o circles"></span>Музику</p>
+                    <p class="weWork"><span class="fa fa-bookmark-o circles"></span>Машину</p>
+                    <p class="weWork"><span class="fa fa-bookmark-o circles"></span>Водія</p>
+                        </div>
                     <div class=" vehicles">
                         <div class="col-xs-6 col-sm-6 col-md-3 col-lg-3 econom"></div>
                         <div class="col-xs-6 col-sm-6 col-md-3 col-lg-3 luxury"></div>
