--- a/order/order.html
+++ b/order/order.html
@@ -5,8 +5,18 @@
     <title>Замовити Таксі</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.37/css/bootstrap-datetimepicker.min.css" />
+
     <link rel="stylesheet/less" type="text/css" href="order.less" />
+     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.min.js"> </script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"> </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/less.js/2.5.3/less.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.6/moment.min.js"></script>   
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-validator/0.4.5/css/bootstrapvalidator.min.css"></script> 
+    <script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-validator/0.4.5/js/bootstrapvalidator.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.37/js/bootstrap-datetimepicker.min.js"></script>
+
+    
 
 </head>
 <body>
@@ -58,22 +68,27 @@
                     </div>
                     <label for="carType">Тип машини?</label>
                     <div class="btn-group" id="carType" role="group" aria-label="Basic example">
-                        <button type="button" class="btn btn-default">Економ</button>
-                        <button type="button" class="btn btn-default">Економ+</button>
-                        <button type="button" class="btn btn-default">Вищий клас</button>
-                        <button type="button" class="btn btn-default">Грузове</button>
-                        <button type="button" class="btn btn-lg btn-danger" data-toggle="popover" title="Popover title" data-content="And here's some amazing content. It's very engaging. Right?">Click to toggle popover</button>
-                        <script>
-                            $(function () {
-                                $('[data-toggle="popover"]').popover()
-                            })
-                        </script>
+                        <button type="button" class="btn btn-default" data-toggle="popover" data-trigger="hover" title="Економ" data-content="Розрахований на не більше ніж 4-ох пасажирів">Економ</button>
+                        <button type="button" class="btn btn-default" data-toggle="popover" data-trigger="hover" title="Економ+" data-content="Розрахований на більше ніж 4-ох пасажирів">Економ+</button>
+                        <button type="button" class="btn btn-default" data-toggle="popover" data-trigger="hover" title="Вищий клас" data-content="Розрахований на не більше ніж 4-ох пасажирів. Покращені сидіння, машина вищого класу, безкоштовне шампанське в салоні">Вищий клас</button>
+                        <button type="button" class="btn btn-default" data-toggle="popover" data-trigger="hover" title="Грузове" data-content="Допоможе перевезти габаритний вантаж. Є можливість замовити найманих робітникіх. Деталі за телефоном.">Грузове</button>
                     </div>
+                    <div class="form-group">
+                        <label for="datetimepicker1">Оберіть час прибуття машини:</label>
+                        <div class='input-group date' id='datetimepicker1'>
+                            <input type='text' class="form-control" />
+                            <span class="input-group-addon">
+                                <span class="glyphicon glyphicon-calendar"></span>
+                            </span>
+                        </div>
+                    </div>
+                    
                     <div class="form-group" >
                         <label for="phoneNumber">Номер телефону:</label>
-                        <input class="form-control" id="phoneNumber" type="text">
+                        <input class="form-control" data-minlength="13" id="phoneNumber" type="text" required>                        
                     </div>
 
+   
                 </div>
                 <div class="card container-fluid col-sm-7 col-md-7 padding-less">
                     <div class="title col-md-12">Звідки і куди</div>
@@ -101,8 +116,7 @@
     </div>
 
     <!--JQuery-->
-    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.min.js"> </script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"> </script>
+   
 
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyB26x_aNb_EYyxa7d7yZUQYEfT14GRyd1M&libraries=places&callback=init" async defer></script>
