--- a/order/order.html
+++ b/order/order.html
@@ -14,7 +14,7 @@
         <div class="header">
 
         </div>
-        <div class="container coloumn-container ">
+        <div class=" coloumn-container ">
             <div class="row all-block">
 
 
@@ -75,6 +75,7 @@
                     </div>
 
                 </div>
+                <div class="col-sm-1 col-md-1"></div>
                 <div class="card container-fluid col-sm-7 col-md-7 padding-less">
                     <div class="title col-md-12">Звідки і куди</div>
                     <div class="input-fields col-md-12 col-sm-12">
@@ -85,12 +86,15 @@
                         <div id="map" class="map"></div>
                     </div>
 
-                    <div class="price col-sm-4 col-md-4">
+                    <div class="price col-xs-12 col-sm-4 col-md-4">
                         <div class="detail-price">
-                            <div class="distance bulb"><span id="distance" >Відстань: </span></div>
-                            <div class="time bulb"><span id="time">Час: </span></div>
-                            <div class="money bulb"><span id="money">Ціна: </span></div>
+                            <div class="distance bulb">Відстань: <span id="distance" >0</span> км</div>
+                            <div class="time bulb">Час: <span id="time">0</span> хв</div>
+                            <div class="money ">Ціна: <span id="money">0</span> грн</div>
+
                         </div>
+
+
                     </div>
                 </div>
 
