--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -9,7 +9,7 @@
     <!-- LESS основний файл -->
     <link rel="stylesheet/less" type="text/css" href="../less/startpage.less" />
     <!-- LESS JavaScript компілятор -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/less.js/2.5.3/less.min.js"></script>
+    <script type="text/javascript"  src="../js/less.js"> </script>
     
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" type="text/css">
 </head>
