--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 
     <!-- LESS основний файл -->
+    <link rel="stylesheet/less" type="text/css" href="../less/startpage.less" />
     <!-- LESS JavaScript компілятор -->
     <script type="text/javascript"  src="../js/less.js"> </script>
     
