--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 
     <!-- LESS основний файл -->
-    <link rel="stylesheet" type="text/css" href="../frontend/css/startpage.css" />
+    <link rel="stylesheet" type="text/css" href="frontend/css/startpage.css" />
     <!-- LESS JavaScript компілятор -->
     <script type="text/javascript"  src="../js/less.js"> </script>
     
