--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 
     <!-- LESS основний файл -->
-    <link rel="stylesheet/less" type="text/css" href="../css/startpage.css" />
+    <link rel="stylesheet/less" type="text/css" href="frontend/css/startpage.css" />
     <!-- LESS JavaScript компілятор -->
-    <script type="text/javascript"  src="../js/less.js"> </script>
+    <script type="text/javascript"  src="frontend/js/less.js"> </script>
     
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" type="text/css">
 </head>
@@ -59,7 +59,7 @@
                     <p><span class="fa fa-hashtag"></span>HashtagTaxi</p>
                     <ul class="list-inline banner-social-buttons">
                     <li>
-                        <a class="btn btn-default btn-lg order-btn" href="../../order/order.html">Замовити</a>
+                        <a class="btn btn-default btn-lg order-btn" href="order/order.html">Замовити</a>
                     </li>
                     </ul>
                 </div>
@@ -73,7 +73,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <h1 class="mainSign">Про нас</h1>
-                    <img src="../images/onlineorder.png" class="orderonline">
+                    <img src="frontend/images/onlineorder.png" class="orderonline">
                     <p class="weWork"> Не зважаючи на короткий термін свого існування, наша служба TurboTaxi вже встигла зарекомендувати себе, як одна з найкращих фірм-перевізників української столиці.</p>
                     <p class="weWork">Спробуйте наше таксі та переконайтеся самі в:</p>
                     <div class="advantages">
@@ -154,6 +154,6 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
 <!--Own JavaScript -->
-<script type="text/javascript"  src="../js/startpage.js"> </script>
+<script type="text/javascript"  src="frontend/js/startpage.js"> </script>
 </body>
 </html>
